2002-06-27  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-gpg-context.c (gpg_ctx_op_step): Loop on our reads while
	errno is EINTR or EAGAIN. Also make sure to completely read stdout
	and stderr by keeping better state.

2002-06-26  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-multipart-signed.c (g_mime_multipart_signed_sign): Once
	we've created the mime-part stream and armored the From lines and
	such, create a new MIME part based on this stream (since normally
	our QP encoder will not armor From lines) and use it as the
	content part for this multipart/signed part rather than the
	original MIME part.
	(multipart_signed_write_to_stream): This can now be simplified by
	calling our parent class's write_to_stream implementation since
	g_mime_multipart_signed_sign() takes care of all the From
	armoring.

2002-06-26  Jeffrey Stedfast  <fejj@ximian.com>

	* test-pgpmime.c: New test suite for the pgp/mime code.

	* gmime-gpg-context.c (gpg_ctx_parse_status): Handle a NODATA
	status message from gpg.

	* gmime-message.c (g_mime_message_new): Don't set NULL header
	values via the g_mime_object_set_header interface.

	* gmime-object.c (g_mime_object_add_header): Don't allow value == NULL.
	(g_mime_object_set_header): Same.

	* gmime.h.in: Updated to #include the new headers related to
	encryption and digital signatures.

	* gmime.c (g_mime_init): register the multipart/encrypted and
	multipart/signed cclass types.

	* gmime-multipart-signed.c: Fixed to compile cleanly.
	(multipart_signed_write_to_stream): We need to handle writing out
	the subparts ourselves because we need to armor From-lines.

	* gmime-multipart-encrypted.c: Fixed to compile cleanly.

2002-06-25  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-param.c (g_string_append_len_quoted): Append length as
	advertised rather than appending the whole string. Oops.

	* gmime-multipart-encrypted.c
	(g_mime_multipart_encrypted_decrypt): Ugh, the
	g_return_val_if_fail()'s should be returning NULL.
